# DOIR

./: .gitignore  .gitmodules  CMakeLists.txt  CMakeSettings.json  README.md  diagnostics.cpp  diagnostics.hpp  doir.spec  driver.cpp  file_manager.hpp  grammar.peg  hello.cpp  interface.copy.cpp  interface.cpp  interface.global_block.cpp  interface.hpp  interface.resolve.cpp  interface.verify.cpp  mio.hpp  mizu.doir  mizu_doir_instructions.hpp  module.cpp  module.hpp  parser.cpp  parser.hpp  print.cpp  print.hpp  readme.md  source_location.hpp  standard.doir  string_helpers.hpp  systems.cpp  systems.hpp  temp_byte_dumper.hpp  temp_byte_dumper.py  test.doir  test_hello_world.doir  test_string.doir
benchmark/: CMakeLists.txt  graph.cpp  graph.cpp.in  graph10.dl  graph10.hpp  graph10.pl  graph100.dl  graph100.hpp  graph100.pl  graph1000.dl  graph1000.hpp  graph1000.pl  graph15.dl  graph15.hpp  graph15.pl  graph20.dl  graph20.hpp  graph20.pl  graph25.hpp  graph5.dl  graph5.hpp  graph5.pl  graph50.dl  graph50.hpp  graph50.pl  graph500.dl  graph500.hpp  graph500.pl  graphGen.py  list.bench.cpp  list.cpp  list.dl  list.pl  simpsons.bench.cpp  simpsons.cpp  simpsons.dl  simpsons.pl  type_check.bench.cpp  type_check.cpp  type_check.dl  (+4 more)
mizu_gen/: CMakeLists.txt  bin2header.cpp  gen.cpp
opt/: allocate_registers.hpp  compute_compiler_namespace.cpp  compute_compiler_namespace.hpp  inline_functions.cpp  inline_functions.hpp  materialize_aliases.hpp  mizu_materialize_immediates.hpp  pin_registers.hpp  strip_freestanding_blocks.hpp
opt/mizu/: comptime_evaluate.cpp  comptime_evaluate.hpp  materialize_immediates.hpp
sema/: comptime.hpp  error_helper.hpp  function_arity.hpp  lookup.cpp  lookup.hpp  name_reuse.hpp  sorted_walker_template  strip_names.hpp  util.hpp
sema/canonicalize/: materialize_function_types_and_parameters.hpp  process_early_include.hpp  sort.cpp  sort.hpp  walker_template
src/ECS/: entity.hpp  kanren.hpp  relational.hpp
src/Lox/: 3ac.cpp  dump.cpp  interp.cpp  lox.hpp  lox.y
tests/: benchmark_lox.cpp.bench
